<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:src="@drawable/baseline_arrow_back_ios_24"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Not Başlığı"
        android:inputType="text"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:gravity="top|start"
        android:hint="Not İçeriği"
        android:inputType="textMultiLine"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextTags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/tags_hint"
        android:inputType="text"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/colorPickerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp">

        <View
            android:id="@+id/color_white"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/circle_white"
            android:layout_margin="4dp"/>
        <View
            android:id="@+id/color_red"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/circle_red"
            android:layout_margin="4dp"/>
        <View
            android:id="@+id/color_green"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/circle_green"
            android:layout_margin="4dp"/>
        <View
            android:id="@+id/color_blue"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/circle_blue"
            android:layout_margin="4dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="end">

        <Button
            android:id="@+id/buttonArchive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/archive"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update" />

    </LinearLayout>

</LinearLayout>